--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -46,5 +46,8 @@ jobs:
       name: github-pages
       url: https://binkersss.github.io/portfolio/
     steps:
-      - name: Deploy artifact to GitHub Pages
-        uses: actions/deploy-pages@v1
+      - name: Deploy to gh-pages branch (peaceiris)
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
